recherche/devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-ingress
  namespace: app-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pos.elafia-manager.com
    - pos-admin.elafia-manager.com
    - pos-api.elafia-manager.com
    secretName: pos-tls-secret
  rules:
  - host: pos.elafia-manager.com
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pos-ui-service
            port:
              number: 80

  - host: pos-admin.elafia-manager.com
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pos-admin-service
            port:
              number: 80

  - host: pos-api.elafia-manager.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pos-api-service
            port:
              number: 80
